@@ -19,7 +19,8 @@ Version 0.4n
  - Loss, PC blows cocked cat. Written by LukaDoc. Patreon-sponsored
 * Fixed a bug with the Green Scented Candle. It actually does something now
 * Added a new Halloween scene, written by QB and LD, featuring a certain doberherm. Find it in the new room in the Mausoleum
-* The scenes to aquire Anusol can now be accessed. Talk to Rosalin once you've convinced the game that you really like anal
+* The scenes to acquire Anusol can now be accessed. Talk to Rosalin once you've convinced the game that you really like anal
+* The scene to acquire Anusol+ can now be accessed. Bring a vial of Anusol to Jeanne
 
 --------------------------------------------
              PREVIOUS VERSIONS
